<?xml version="1.0"?>
<package format="2">
  <name>kuka_lbr_iiwa_support</name>
  <version>0.1.0</version>
  <description>
    <p>
      ROS-Industrial support for the KUKA LBR IIWA (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for KUKA LBR IIWA manipulators. This currently includes the base model.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in
      the KUKA <a href="http://www.kuka-robotics.com/res/sps/e6c77545-9030-49b1-93f5-4d17c92173aa_Spez_LBR_iiwa_en.pdf">data sheets</a> online. 
      All urdf's / xacro's are based on the default motion and joint velocity 
      limits, unless noted otherwise (ie: no support for high speed joints, 
      extended / limited motion ranges or other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>Levi Armstrong (Southwest Research Institute)</author>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong (Southwest Research Institute)</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/kuka_lbr_iiwa_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/kuka_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/kuka_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>industrial_robot_client</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
