<?xml version="1.0"?>
<package format="2">
  <name>kuka_resources</name>
  <version>0.1.0</version>
  <description>
    <p>
      Shared resources for KUKA manipulators within ROS-Industrial.
    </p>
    <p>
      This package contains common urdf / xacro resources used by KUKA robot
      support packages within the ROS-Industrial program.
    </p>
  </description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>Apache2</license>

  <url type="website">http://wiki.ros.org/kuka_resources</url>
  <url type="bugtracker">https://github.com/ros-industrial/kuka_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/kuka_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <architecture_independent />
  </export>
</package>
