<?xml version="1.0"?>
<package>
  <name>kuka_rsi_hw_interface</name>
  <version>0.1.0</version>
  <description>A ROS-Control hardware interface for use with KUKA RSI</description>
  <author>Lars Tingelstad</author>
  <maintainer email="lars.tingelstad@ntnu.no">Lars Tingelstad</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/kuka_rsi_hw_interface</url>
  <url type="bugtracker">https://github.com/ros-industrial/kuka_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/kuka_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
