<?xml version="1.0"?>
<package format="2">
  <name>kuka_rsi_hw_interface_msgs</name>
  <version>0.0.0</version>
  <description>The kuka_rsi_hw_interface_msgs package</description>

<maintainer email="Mahmoud@Farshbaf.Net">Mahmoud FArshbaf</maintainer>
<license>BSD</license>
<author email="Mahmoud@Farshbaf.Net">Mahmoud Farshbaf</author>

<buildtool_depend>catkin</buildtool_depend>
<buildtool_depend>message_generation</buildtool_depend>
<depend>std_msgs</depend>
</package>
