<?xml version="1.0"?>
<package format="2">
  <name>kuka_rsi_simulator</name>
  <version>0.1.0</version>
  <description>Python node that implements a minimal RSI interface simulator.</description>
  <author>Lars Tingelstad</author>
  <maintainer email="lars.tingelstad@ntnu.no">Lars Tingelstad</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/kuka_rsi_simulator</url>
  <url type="bugtracker">https://github.com/ros-industrial/kuka_experimental/issues</url>
  <url type="repository">https://github.com/ros-industrial/kuka_experimental</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
